# lem2lab2

./: AlfPointer.h  Algorithms.h  ArraySequence.h  BarChart.h  CMakeLists.txt  DynamicArray.h  FreqSeQ.h  IMap.h  LinkedList.h  LinkedListSequence.h  Person.h  Sequence.h  SparseMatrix.h  SparseVector.h  UnitTests.h  graphik.h  main.cpp
